--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Студія</title>
 </head>
 <body>
 <header>
 <nav>
     <a href="/">
-        WebStudio
+        <span class="Web">Web</span><span class="Studio">Studio</span>
     </a>
-test
-    <ul>
-       <li><a href="/">
+    <ul class="header-text">
+       <li><a class="nav-link-st" href="#">
         Студія
     </a>
     </li>
        <li>
-        <a href="/">
+        <a href="./portfolio.html">
         Портфоліо
         </a>
     </li>
@@ -31,45 +34,46 @@ test
     </ul>
     </nav>
 
-    <ul>
-        <li>
+    <ul class="contacts">
+        <li class="mailto">
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
     </li>
     <li>
-        <a href="tel:+380961111111">38 096 111 11 11</a>
+        <a class="tel-gray"" href="tel:+380961111111">38 096 111 11 11</a>
+    </li>
     </ul>
 </header>
 <main>
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">
+        <section class="color-section">
+            <h1 class="title-h1">Ефективні рішення для вашого бізнесу</h1>
+            <button class="button-section1" type="button">
             Замовити послугу </button>
         </section>
 
     <section>
-        <h2>Наші переваги</h2>
-        <ul>
+        <h2 hidden>Наші переваги</h2>
+        <ul class="section2-title-h3">
             <li>
                 <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                <p>
+                <p class="section2-title-p">
                     Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                 </p>
             </li>
             <li>
                 <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                <p>
+                <p class="section2-title-p">
                     Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                 </p>
             </li>
             <li>
                 <h3>ПЛАНУВАННЯ</h3>
-                <p>
+                <p class="section2-title-p">
                     Так само консультація з широким активом значною мірою зумовлює.
                 </p>
             </li>
             <li>
                 <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p>
+                <p class="section2-title-p">
                     Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                 </p>
             </li>
@@ -77,7 +81,7 @@ test
     </section>
 
     <section>
-        <h2>Чим ми займаємося</h2>
+        <h2 class="section-title-text">Чим ми займаємося</h2>
 
         <ul>
             <li>
@@ -93,47 +97,48 @@ test
     </section>
 
     <section>
-        <h2>Наша команда</h2>
+        <h2 class=".section-title-text">Наша команда</h2>
 
         <ul>
             <li>
                 <img src="./images/pers1.jpg" alt="Ігор Дем'яненко"  width=270  height="260">
-                <h3>Ігор Дем'яненко</h3>
-                <p>Product Designer</p>
+                <h3 class="section-name">Ігор Дем'яненко</h3>
+                <p class="profession">Product Designer</p>
             </li>
             <li>
                 <img src="./images/pers2.jpg" alt="Ольга Рєпіна"  width=270  height="260">
-                <h3>Ольга Рєпіна</h3>
-                <p>Frontend Developer</p>
+                <h3 class="section-name">Ольга Рєпіна</h3>
+                <p class="profession">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/pers3.jpg" alt="Микола Тарасов"  width=270  height="260">
-                <h3>Микола Тарасов</h3>
-                <p>Marketing</p>
+                <h3 class="section-name">Микола Тарасов</h3>
+                <p class="profession">Marketing</p>
             </li>
             <li>
                 <img src="./images/pers4.jpg" alt="Михайло Єрмаков"  width=270  height="260">
-                <h3>Михайло Єрмаков</h3>
-                <p>UI Designer</p>
+                <h3 class="section-name">Михайло Єрмаков</h3>
+                <p class="profession">UI Designer</p>
             </li>
          
         </ul>
 
     </section>
     </main>
-    <footer>
+    <footer class="footer-fon">
         <a href="/">
-            WebStudio
+            <span class="Web">Web</span><span class="Studio-white">Studio</span>
         </a>
         <address>
             <ul>
-                <li><a href="https://goo.gl/maps/ibuLNQxGVC2uv8bN8">м. Київ, пр-т Лесі Українки, 26</a>
+                <li>
+                    <a class="footer-google" href="https://goo.gl/maps/ibuLNQxGVC2uv8bN8">м. Київ, пр-т Лесі Українки, 26</a>
                   </li>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="footer-text" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111">38 096 111 11 11</a>
+                    <a class="footer-text" href="tel:+380961111111">38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
