--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
     </li>
     <li>
-        <a class="tel-gray"" href="tel:+380961111111">38 096 111 11 11</a>
+        <a class="tel-gray" href="tel:+380961111111">38 096 111 11 11</a>
     </li>
     </ul>
 </header>
