--- a/portfolio.html
+++ b/portfolio.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Портфоліо1</title>
+    <title>Портфоліо</title>
 </head>
 <body>
-<header>
+<header class="header">
 <nav>
     <a href="/">
         <span class="Web">Web</span><span class="Studio">Studio</span>
     </a>
-    <ul class="header-text">
-       <li><a href="./index.html">
-        Студія
-    </a>
-    </li>
-       <li>
-        <a class="nav-link" href="#">
-        Портфоліо
-        </a>
-    </li>
-       <li>
-        <a href="/">
-        Контакти
-        </a>
+    <ul>
+        <li><a class="header-nav-link" href="#">
+         Студія
+     </a>
+     </li>
+        <li>
+         <a class="header-nav-link" href="./portfolio.html">
+         Портфоліо
+         </a>
+     </li>
+        <li>
+         <a class="header-nav-link" href="#">
+            Контакти
+         </a>
     </li>
     </ul>
     </nav>
